[package]
authors.workspace = true
description = "Shared traits and structs used across the KILT pallets"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "kilt-support"
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# External dependencies
parity-scale-codec = {workspace = true, features = ["derive"]}
scale-info = {workspace = true, features = ["derive"]}

# Substrate dependencies
frame-support.workspace = true
frame-system.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

# std dependencies
serde = {workspace = true, optional = true}

[features]
default = ["std"]
mock = []
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "serde",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
