[package]
authors = ["KILT <info@kilt.io>"]
description = "Asset DIDs and related structs, suitable for no_std environments."
edition = "2021"
name = "kilt-asset-dids"
repository = "https://github.com/KILTprotocol/kilt-node"
version = "1.8.0"

[dependencies]
# External dependencies
base58 = {version = "0.2.0", default-features = false}
hex = {version = "0.4.3", default-features = false}
hex-literal = {version = "0.3.4", default-features = false}
log = {version = "0.4.17", default-features = false}

# Parity dependencies
codec = {package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"]}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}

# Substrate dependencies
frame-support = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-core = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = {branch = "polkadot-v0.9.29", default-features = false, git = "https://github.com/paritytech/substrate"}

[features]
default = ["std"]

std = [
  "codec/std",
  "hex/std",
  "log/std",
  "scale-info/std",
  "frame-support/std",
  "sp-core/std",
  "sp-std/std",
]
