cargo-features = ["workspace-inheritance"]

[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "kilt-asset-dids"
description = "Asset DIDs and related structs, suitable for no_std environments."

[dependencies]
# External dependencies
base58.workspace = true
hex = {workspace = true, features = ["alloc"]}
hex-literal.workspace = true
log.workspace = true

# Parity dependencies
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
scale-info = {workspace = true, features = ["derive"]}

# Substrate dependencies
frame-support.workspace = true
sp-core.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
std = [
  "codec/std",
  "hex/std",
  "log/std",
  "scale-info/std",
  "frame-support/std",
  "sp-core/std",
  "sp-std/std",
]
