[package]
authors       = { workspace = true }
description   = "Asset DIDs and related structs, suitable for no_std environments."
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license-file  = { workspace = true }
name          = "kilt-asset-dids"
readme        = { workspace = true }
repository    = { workspace = true }
version       = { workspace = true }

[dependencies]
# External dependencies
base58      = { workspace = true }
hex         = { workspace = true, features = ["alloc"] }
hex-literal = { workspace = true }
log         = { workspace = true }

# Parity dependencies
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info         = { workspace = true, features = ["derive"] }

# Substrate dependencies
frame-support = { workspace = true }
sp-core       = { workspace = true }
sp-std        = { workspace = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "hex/std",
  "log/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-std/std",
]
