[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "dip-support"
description = "Support types, traits, and functions for the KILT Decentralized Identity Provider (DIP) functionality."

[dependencies]
# Parity dependencies
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
scale-info = {workspace = true, features = ["derive"]}

# Substrate dependencies
frame-support = {workspace = true, default-features = false}
sp-io = {workspace = true, default-features = false}
sp-runtime = {workspace = true, default-features = false}
sp-std = {workspace = true, default-features = false}

# Polkadot dependencies
xcm = {workspace = true, default-features = false}
xcm-executor = {workspace = true, default-features = false}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "xcm/std",
  "xcm-executor/std"
]
