[package]
authors.workspace = true
description = "Support types, traits, and functions for the KILT Decentralized Identity Provider (DIP) functionality as implemented by the KILT blockchain."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "kilt-dip-support"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
did.workspace = true
dip-support.workspace = true
pallet-dip-consumer.workspace = true
pallet-dip-provider.workspace = true

# Parity dependencies
parity-scale-codec = {workspace = true, features = ["derive"]}
scale-info = {workspace = true, features = ["derive"]}

# Substrate dependencies
frame-system.workspace = true
frame-support.workspace = true
sp-runtime.workspace = true
sp-core.workspace = true
sp-state-machine.workspace = true
sp-std.workspace = true
sp-trie.workspace = true

# Polkadot dependencies
xcm.workspace = true
xcm-executor.workspace = true

[dev-dependencies]
hex-literal.workspace = true
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
  "did/std",
  "dip-support/std",
  "pallet-dip-consumer/std",
  "pallet-dip-provider/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-system/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-state-machine/std",
  "sp-trie/std",
  "sp-std/std",
  "xcm-executor/std",
  "xcm/std"
]
runtime-benchmarks = []
