[package]
authors.workspace = true
description = "Support types, traits, and functions for the KILT Decentralized Identity Provider (DIP) functionality as implemented by the KILT blockchain."
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "kilt-dip-support"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# External dependencies
hash-db.workspace = true

# Internal dependencies
did.workspace = true
pallet-dip-consumer.workspace = true
pallet-dip-provider.workspace = true
pallet-relay-store.workspace = true

# Parity dependencies
parity-scale-codec = {workspace = true, features = ["derive"]}
scale-info = {workspace = true, features = ["derive"]}

# Substrate dependencies
frame-system.workspace = true
frame-support.workspace = true
sp-runtime.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-state-machine.workspace = true
sp-std.workspace = true
sp-trie.workspace = true

# Polkadot dependencies
rococo-runtime.workspace = true
xcm.workspace = true
xcm-executor.workspace = true

# Cumulus dependencies
cumulus-pallet-parachain-system.workspace = true

[dev-dependencies]
hex-literal.workspace = true
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
  "hash-db/std",
  "did/std",
  "pallet-dip-consumer/std",
  "pallet-dip-provider/std",
  "pallet-relay-store/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-system/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-io/std",
  "sp-state-machine/std",
  "sp-std/std",
  "sp-trie/std",
  "rococo-runtime/std",
  "xcm/std",
  "xcm-executor/std",
  "cumulus-pallet-parachain-system/std",
]
runtime-benchmarks = [
  "pallet-dip-consumer/runtime-benchmarks",
  "rococo-runtime/runtime-benchmarks"
]
