[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "kilt-utils"
description = "Utility functions, which are used in the node and in the SDK as wasm."

[dependencies]
# parity dependencies
codec = {package = "parity-scale-codec", workspace = true, default-features = false}
sp-core.workspace = true
sp-std.workspace = true

