[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "kilt-utils"
description = "Utility functions, which are used in the node and in the SDK as wasm."

[dependencies]
# Parity dependencies
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
sp-core.workspace = true
sp-std.workspace = true

# Can be compiled without the std feature if compiling for the "wasm32-unknown-unknown" target.
# cargo check -p kilt-utils --no-default-features --target wasm32-unknown-unknown
[features]
default = ["std"]
std = [
  "codec/std",
  "sp-core/std",
  "sp-std/std",
]
