[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "dip-node-template"
description = "Node template for the KILT Decentralized Identity Provider (DIP)."
build = "build.rs"

[[bin]]
name = "kilt-dip-template"
path = "src/main.rs"

[dependencies]
clap = {workspace = true, features = ["derive"]}
log.workspace = true
codec.workspace = true
serde = {workspace = true, features = ["derive"]}
jsonrpsee = {workspace = true, features = ["server"]}

# Internal dependencies
dip-receiver-runtime-template.workspace = true
dip-sender-runtime-template.workspace = true

# Substrate
frame-benchmarking.workspace = true
frame-benchmarking-cli.workspace = true
pallet-transaction-payment-rpc.workspace = true
sc-basic-authorship.workspace = true
sc-chain-spec.workspace = true
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-network-common = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38"}
sc-service.workspace = true
sc-sysinfo.workspace = true
sc-telemetry.workspace = true
sc-tracing.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sp-api.workspace = true
sp-block-builder.workspace = true
sp-blockchain.workspace = true
sp-consensus-aura.workspace = true
sp-core.workspace = true
sp-keystore.workspace = true
sp-offchain.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-session.workspace = true
sp-timestamp.workspace = true
sp-transaction-pool.workspace = true
substrate-frame-rpc-system.workspace = true
substrate-prometheus-endpoint.workspace = true
try-runtime-cli = { workspace = true, optional = true }

# Polkadot
polkadot-cli.workspace = true
polkadot-primitives.workspace = true
polkadot-service.workspace = true
xcm.workspace = true

# Cumulus
cumulus-client-cli.workspace = true
cumulus-client-consensus-aura.workspace = true
cumulus-client-consensus-common.workspace = true
cumulus-client-network.workspace = true
cumulus-client-service.workspace = true
cumulus-primitives-core.workspace = true
cumulus-primitives-parachain-inherent.workspace = true
cumulus-relay-chain-interface.workspace = true

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime"
]
