[package]
authors.workspace = true
description = "Emulated integration tests for XCM config"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
name = "xcm-integration-tests"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dev-dependencies]
asset-hub-kusama-runtime = {workspace = true, features = ["std"]}
asset-hub-polkadot-runtime = {workspace = true, features = ["std"]}
asset-hub-westend-runtime = {workspace = true, features = ["std"]}
attestation = {workspace = true, features = ["std"]}
bridge-hub-kusama-runtime = {workspace = true, features = ["std"]}
bridge-hub-polkadot-runtime = {workspace = true, features = ["std"]}
bridge-hub-rococo-runtime = {workspace = true, features = ["std"]}
collectives-polkadot-runtime = {workspace = true, features = ["std"]}
ctype = {workspace = true, features = ["std"]}
cumulus-pallet-dmp-queue = {workspace = true, features = ["std"]}
cumulus-pallet-xcmp-queue = {workspace = true, features = ["std"]}
cumulus-primitives-core = {workspace = true, features = ["std"]}
did = {workspace = true, features = ["std"]}
frame-support = {workspace = true, features = ["std"]}
frame-system = {workspace = true, features = ["std"]}
integration-tests-common.workspace = true
kilt-asset-dids = {workspace = true, features = ["std"]}
pallet-did-lookup = {workspace = true, features = ["std"]}
pallet-message-queue = {workspace = true, features = ["std"]}
pallet-web3-names = {workspace = true, features = ["std"]}
pallet-xcm = {workspace = true, features = ["std"]}
parity-scale-codec = {workspace = true, features = ["std", "derive"]}
penpal-runtime = {workspace = true, features = ["std"]}
peregrine-runtime = {workspace = true, features = ["std"]}
polkadot-parachain = {workspace = true, features = ["std"]}
polkadot-primitives = {workspace = true, features = ["std"]}
polkadot-runtime-constants = {workspace = true, features = ["std"]}
polkadot-runtime-parachains = {workspace = true, features = ["std"]}
polkadot-runtime = {workspace = true, features = ["std"]}
polkadot-service.workspace = true
polkadot-test-runtime = {workspace = true, features = ["std"]}
public-credentials = {workspace = true, features = ["std", "mock"]}
rococo-runtime = {workspace = true, features = ["std"]}
runtime-common = {workspace = true, features = ["std"]}
sc-consensus-grandpa.workspace = true
sp-authority-discovery = {workspace = true, features = ["std"]}
sp-consensus-babe = {workspace = true, features = ["std"]}
sp-consensus-beefy = {workspace = true, features = ["std"]}
sp-core = {workspace = true, features = ["std"]}
sp-io = {workspace = true, features = ["std"]}
sp-runtime = {workspace = true, features = ["std"]}
sp-tracing = {workspace = true, features = ["std"]}
spiritnet-runtime = {workspace = true, features = ["std"]}
xcm-emulator.workspace = true
xcm-executor = {workspace = true, features = ["std"]}
xcm = {workspace = true, features = ["std"]}