[package]
authors       = { workspace = true }
description   = "Emulated integration tests for XCM config"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license-file  = { workspace = true }
name          = "xcm-integration-tests"
readme        = { workspace = true }
repository    = { workspace = true }
version       = { workspace = true }

[dependencies]
asset-hub-kusama-runtime     = { workspace = true, default-features = true }
asset-hub-polkadot-runtime   = { workspace = true, default-features = true }
asset-hub-westend-runtime    = { workspace = true, default-features = true }
attestation                  = { workspace = true, default-features = true }
bridge-hub-kusama-runtime    = { workspace = true, default-features = true }
bridge-hub-polkadot-runtime  = { workspace = true, default-features = true }
bridge-hub-rococo-runtime    = { workspace = true, default-features = true }
collectives-polkadot-runtime = { workspace = true, default-features = true }
ctype                        = { workspace = true, default-features = true }
cumulus-pallet-dmp-queue     = { workspace = true, default-features = true }
cumulus-pallet-xcmp-queue    = { workspace = true, default-features = true }
cumulus-primitives-core      = { workspace = true, default-features = true }
did                          = { workspace = true, default-features = true }
frame-support                = { workspace = true, default-features = true }
frame-system                 = { workspace = true, default-features = true }
integration-tests-common     = { workspace = true, default-features = true }
kilt-asset-dids              = { workspace = true, default-features = true }
pallet-bags-list             = { workspace = true, default-features = true }
pallet-did-lookup            = { workspace = true, default-features = true }
pallet-message-queue         = { workspace = true, default-features = true }
pallet-web3-names            = { workspace = true, default-features = true }
pallet-xcm                   = { workspace = true, default-features = true }
parity-scale-codec           = { workspace = true, features = ["derive"], default-features = true }
penpal-runtime               = { workspace = true, default-features = true }
peregrine-runtime            = { workspace = true, default-features = true }
polkadot-parachain           = { workspace = true, default-features = true }
polkadot-primitives          = { workspace = true, default-features = true }
polkadot-runtime             = { workspace = true, default-features = true }
polkadot-runtime-constants   = { workspace = true, default-features = true }
polkadot-runtime-parachains  = { workspace = true, default-features = true }
polkadot-service             = { workspace = true, default-features = true }
polkadot-test-runtime        = { workspace = true, default-features = true }
public-credentials           = { workspace = true, features = ["mock"], default-features = true }
rococo-runtime               = { workspace = true, default-features = true }
runtime-common               = { workspace = true, default-features = true }
sc-consensus-grandpa         = { workspace = true, default-features = true }
sp-authority-discovery       = { workspace = true, default-features = true }
sp-consensus-babe            = { workspace = true, default-features = true }
sp-consensus-beefy           = { workspace = true, default-features = true }
sp-core                      = { workspace = true, default-features = true }
sp-io                        = { workspace = true, default-features = true }
sp-runtime                   = { workspace = true, default-features = true }
sp-tracing                   = { workspace = true, default-features = true }
spiritnet-runtime            = { workspace = true, default-features = true }
xcm                          = { workspace = true, default-features = true }
xcm-emulator                 = { workspace = true, default-features = true }
xcm-executor                 = { workspace = true, default-features = true }

[features]
runtime-benchmarks = [
  "asset-hub-kusama-runtime/runtime-benchmarks",
  "asset-hub-polkadot-runtime/runtime-benchmarks",
  "asset-hub-westend-runtime/runtime-benchmarks",
  "bridge-hub-kusama-runtime/runtime-benchmarks",
  "bridge-hub-polkadot-runtime/runtime-benchmarks",
  "bridge-hub-rococo-runtime/runtime-benchmarks",
  "collectives-polkadot-runtime/runtime-benchmarks",
  "ctype/runtime-benchmarks",
  "did/runtime-benchmarks",
  "integration-tests-common/runtime-benchmarks",
  "penpal-runtime/runtime-benchmarks",
  "peregrine-runtime/runtime-benchmarks",
  "polkadot-runtime/runtime-benchmarks",
  "polkadot-test-runtime/runtime-benchmarks",
  "rococo-runtime/runtime-benchmarks",
  "runtime-common/runtime-benchmarks",
  "spiritnet-runtime/runtime-benchmarks",
]

try-runtime = [
  "ctype/try-runtime",
  "did/try-runtime",
  "pallet-bags-list/try-runtime",
  "peregrine-runtime/try-runtime",
  "spiritnet-runtime/try-runtime",
]
