[package]
authors = ["KILT <info@kilt.io>"]
edition = "2021"
description = "Set of common utility types, functions, and traits that all node executables can tap into."
name = "node-common"
version = "1.8.0"

[dependencies]
# Client dependencies
serde = {version = "1.0.137", features = ["derive"]}

# Runtime dependencies
kilt-support = {path = "../../support"}
public-credentials = {path = "../../pallets/public-credentials"}
public-credentials-rpc = {path = "../../rpc/public-credentials"}

[features]
default = []
