[package]
authors = ["KILT <info@kilt.io>"]
build = "build.rs"
description = "KILT parachain"
edition = "2021"
name = "kilt-parachain"
version = "1.7.2"

[[bin]]
name = "kilt-parachain"
path = "src/main.rs"

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }

[dependencies]

# Internal dependencies
clone-runtime = {path = "../../runtimes/clone"}
did-rpc = {path = "../../rpc/did"}
node-common = {path = "../common"}
pallet-did-lookup = {path = "../../pallets/pallet-did-lookup"}
peregrine-runtime = {path = "../../runtimes/peregrine"}
public-credentials = {path = "../../pallets/public-credentials"}
public-credentials-rpc = {path = "../../rpc/public-credentials"}
runtime-common = {path = "../../runtimes/common"}
spiritnet-runtime = {path = "../../runtimes/spiritnet"}

# External dependencies
clap = {version = "3.2.20", features = ["derive"]}
codec = {package = "parity-scale-codec", version = "3.1.5"}
derive_more = "0.99.17"
futures = {version = "0.3.21", features = ["compat"]}
hex-literal = "0.3.4"
jsonrpsee = {version = "0.15.1", features = ["server"]}
log = "0.4.17"
parking_lot = "0.12.1"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.83"

# Substrate dependencies
frame-rpc-system = {package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-chain-spec = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-cli = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"], rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-client-api = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-consensus = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-executor = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"], rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-keystore = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-network = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-rpc = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-rpc-api = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-service = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"], rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-sysinfo = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-telemetry = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-tracing = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-api = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-block-builder = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-blockchain = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-consensus = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-core = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-inherents = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-keystore = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-offchain = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-runtime = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-session = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-timestamp = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
substrate-prometheus-endpoint = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }

# Cumulus dependencies
cumulus-client-cli = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-client-collator = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-client-consensus-aura = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-client-consensus-common = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-client-network = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-client-service = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-primitives-parachain-inherent = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-relay-chain-inprocess-interface = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-relay-chain-interface = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }
cumulus-relay-chain-rpc-interface = {git = "https://github.com/paritytech/cumulus", rev = "5b5f1d0862be053c399c76ed95174da293fb537e" }

# Polkadot dependencies
polkadot-cli = {git = "https://github.com/paritytech/polkadot", rev = "7725d4b5a12eb503a2380ac534468b87b4476f03" }
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", rev = "7725d4b5a12eb503a2380ac534468b87b4476f03" }
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", rev = "7725d4b5a12eb503a2380ac534468b87b4476f03" }
polkadot-service = {git = "https://github.com/paritytech/polkadot", rev = "7725d4b5a12eb503a2380ac534468b87b4476f03" }
xcm = {git = "https://github.com/paritytech/polkadot", rev = "7725d4b5a12eb503a2380ac534468b87b4476f03" }

# Benchmarking
frame-benchmarking = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }

# Runtime tests
try-runtime-cli = {git = "https://github.com/paritytech/substrate", optional = true, rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }

[features]
default = []
fast-gov = [
  "peregrine-runtime/fast-gov",
  "runtime-common/fast-gov",
]
runtime-benchmarks = [
  "pallet-did-lookup/runtime-benchmarks",
  "polkadot-service/runtime-benchmarks",
  "peregrine-runtime/runtime-benchmarks",
  "public-credentials/runtime-benchmarks",
  "spiritnet-runtime/runtime-benchmarks",
]
try-runtime = [
  "peregrine-runtime/try-runtime",
  "spiritnet-runtime/try-runtime",
  "try-runtime-cli",
]
